|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 8.6.0alpha1

- Core:
  . Added first-class callable cache to share instances for the duration of the
    request. (ilutov)
  . It is now possible to use reference assign on WeakMap without the key
    needing to be present beforehand. (ndossche)
  . Added `clamp()`. (kylekatarnls, thinkverse)

- Hash:
  . Upgrade xxHash to 0.8.2. (timwolla)

- Intl:
  . Added IntlNumberRangeFormatter class to format an interval of two numbers
    with a given skeleton, locale, collapse type and identity fallback.
    (BogdanUngureanu)
  . Fixed bug GH-20426 (Spoofchecker::setRestrictionLevel() error message
    suggests missing constants). (DanielEScherzer)

- Mbstring
  . Fixed bug GH-20674 (Fix GH-20674 mb_decode_mimeheader does not handle
    separator). (Yuya Hamada)

- Fibers:
  . Fixed bug GH-20483 (ASAN stack overflow with fiber.stack_size INI
    small value). (David Carlier)

- Mbstring:
  . ini_set() with mbstring.detect_order changes the order of mb_detect_order
    as intended, since mbstring.detect_order is an INI_ALL setting. (tobee94)
  . Added GB18030-2022 to default encoding list for zh-CN. (HeRaNO)
  . Fixed bug GH-20674 (Fix GH-20674 mb_decode_mimeheader does not handle
    separator). (Yuya Hamada)

- Opcache:
  . Fixed bug GH-20051 (apache2 shutdowns when restart is requested during
    preloading). (Arnaud, welcomycozyhom)

- PDO_PGSQL:
  . Clear session-local state disconnect-equivalent processing.
    (KentarouTakeda)

- Phar:
  . Support reference values in Phar::mungServer(). (ndossche)
  . Invalid values now throw in Phar::mungServer() instead of being silently
    ignored. (ndossche)
  . Support overridden methods in SplFileInfo for getMTime() and getPathname()
    when building a phar. (ndossche)

- Reflection:
  . Fixed bug GH-20217 (ReflectionClass::isIterable() incorrectly returns true
    for classes with property hooks). (alexandre-daubois)

- Soap: